feat: created create user endpoint
